--- a/sagacious.cabal
+++ b/sagacious.cabal
@@ -27,5 +27,6 @@ executable sagacious
                       ,lens ==4.13
                       ,stm-chans ==3.0.0.4
                       ,vector
+                      ,containers
   hs-source-dirs:      src
   default-language:    Haskell2010
